--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -94,7 +94,6 @@ div.sheet-container {
       div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox {
         grid-row-gap: 2%; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1 {
-          background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
           background-repeat: no-repeat;
           background-position: center top;
           text-align: center; }
@@ -109,17 +108,26 @@ div.sheet-container {
             padding: 1% 29%;
             width: 100%; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 2.5em 2.5em;
             grid-column-gap: 2%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input {
-              text-align: center;
-              border: 0.15em solid #bbb; }
+              border: 0.15em solid #bbb;
+              font-size: 1em;
+              font-weight: bold;
+              text-align: center; }
               div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input[name*='bonus'] {
                 border-color: #00b300; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points {
-          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr; }
+          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr;
+          text-align: center; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points input {
             text-align: center; }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills {
+          grid-template-columns: 1fr; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2 {
+            text-align: center; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-grid {
+            grid-template-columns: 1fr 2em 2em 2em; }
 
 img.sheet-header {
   height: 30px;
