--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -35,21 +35,36 @@ include src/pug/_mixins.pug
 				.grid.points
 					each val in ['Survival', 'Competance', 'Gestalt']
 						if val === 'Gestalt'
-							h2(data-i18n=val) #{val} Level:
+							h2(data-i18n=`${val} Level:`) #{val} Level:
 						else
-							h2(data-i18n=val) #{val} Points:
+							h2(data-i18n=`${val} Points:`) #{val} Points:
 						label
 							input.points(name=`attr_${val}_points` title=`@{${val}_points}` value='0' type='text')
 
 				.grid.skills
-					h1(data-i18n='Skills') Skills
+					h1.yellow-header(data-i18n='Skills') Skills
+
+					h2(data-i18n='Basic Skills') Basic Skills
 					.grid
-						h2(data-i18n='Basic Skills') Basic Skills
+
 						each val in ['Balance', 'Brawl', 'Climb', 'Composure', 'Dodge', 'Endurance', 'Expression', 'Grapple', 'Hold', 'Jump/Leap', 'Lift/Pull', 'Resist Pain', 'Search', 'Spot/Listen', 'Stealth']
 							- const name = val.toLowerCase();
+							h3(data-i18n=`${val}`) #{val}
+							input.skillstat(name=`attr_${val}` value='(@{perception}+@{Wb})' title='Perception + Wb' type='hidden')
+							input.skillstat(type='text' name='attr_Gestalt' + val value='0' title='Input total skill gain from spent gestalt levels')
+							input.skillstat(type='text' name='attr_'+ val +'Total' value='[[@#{val}+@{Gest#{val}}]]' title='Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using.' disabled='true')
+							input.skillname(type='hidden' name='attr_'+val+'Tot' value='(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])' disabled='true')
+							button.skillstat(type='roll' name='roll_'+val title='If using no gear select none and select a multiplier of 0' value=`&{template:rolls} {{header=^{${val}}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}`)
+
+
+					h2(data-i18n='Trained Skills') Trained Skills
 					.grid
-						h2(data-i18n='Trained Skills') Trained Skills
 						each val in ['Bow/Crossbow', 'Calm Other', 'Deplomacy Persuade', 'Diplomacy Barter/Bribe', 'Diplomacy Command/Coax', 'Diplomacy Detect Motives', 'Diplomacy Intimidate', 'Digital Systems', 'Firearms Pistol', 'Firearms Long Gun', 'First Aid', 'Melee Attack Blunt', 'Melee Attack Pierce', 'Melee Attack Slash', 'Navigation', 'Swim', 'Throw']
+							- const name = val.toLowerCase();
+
+					h2(data-i18n='Expert Skills') Expert Skills
+					.grid
+						each val in ['Adv Medicine', 'Construct Engineer', 'Specialization','Specialization', 'Martial Arts', 'Pilot', 'Vehicle', 'Vehicle', 'Ride Animal', 'Animal', 'Science', 'Field Of Study', 'Field Of Study', 'Field Of Study', 'Survival', 'Toughness']
 							- const name = val.toLowerCase();
 
 
