--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -77,7 +77,6 @@ div.sheet-container {
         grid-row-gap: 2%;
 
         h1 {
-          background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
           background-repeat: no-repeat;
           background-position: center top;
           text-align: center;
@@ -102,12 +101,14 @@ div.sheet-container {
 
           div.sheet-attributes {
             div.sheet-grid {
-              grid-template-columns: 1fr 1fr;
+              grid-template-columns: 2.5em 2.5em;
               grid-column-gap: 2%;
 
               input {
-                text-align: center;
                 border: 0.15em solid $gray;
+                font-size: 1em;
+                font-weight: bold;
+                text-align: center;
 
                 &[name*='bonus'] {
                   border-color: $green;
@@ -119,6 +120,7 @@ div.sheet-container {
 
         div.sheet-points {
           grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr;
+          text-align: center;
 
           input {
             text-align: center;
@@ -126,7 +128,15 @@ div.sheet-container {
         }
 
         div.sheet-skills {
+          grid-template-columns: 1fr;
 
+          h2 {
+            text-align: center;
+          }
+
+          div.sheet-grid {
+            grid-template-columns: 1fr 2em 2em 2em;
+          }
         }
       }
     }
