added oracle previews

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -420,9 +420,114 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     background-color: #ccc; 
 }
 
+.sheet-oracles {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.sheet-oracle {
+    margin: 0.2em;
+    color: black;
+}
+
+.sheet-oracle-roll {
+    cursor: pointer;
+}
+.sheet-oracle-roll:hover {
+    background: black;
+}
+
 .sheet-hidden {
     display: none;
     position: absolute;
+}
+
+.sheet-hidden-flex {
+    display: none;
+}
+
+input[type=radio].sheet-action:checked ~ div.sheet-action,
+input[type=radio].sheet-theme:checked ~ div.sheet-theme,
+input[type=radio].sheet-region:checked ~ div.sheet-region,
+input[type=radio].sheet-location:checked ~ div.sheet-location,
+input[type=radio].sheet-coastal-waters-location:checked ~ div.sheet-coastal-waters-location,
+input[type=radio].sheet-location-descriptor :checked ~ div.sheet-location-descriptor ,
+input[type=radio].sheet-settlement-name:checked ~ div.sheet-settlement-name,
+input[type=radio].sheet-quick-settlement-name:checked ~ div.sheet-quick-settlement-name,
+input[type=radio].sheet-settlement-trouble:checked ~ div.sheet-settlement-trouble,
+input[type=radio].sheet-character-role:checked ~ div.sheet-character-role,
+input[type=radio].sheet-character-goal:checked ~ div.sheet-character-goal,
+input[type=radio].sheet-character-descriptor:checked ~ div.sheet-character-descriptor,
+input[type=radio].sheet-ironlander-names:checked ~ div.sheet-ironlander-names,
+input[type=radio].sheet-elf-names:checked ~ div.sheet-elf-names,
+input[type=radio].sheet-giant-names:checked ~ div.sheet-giant-names,
+input[type=radio].sheet-varou-names:checked ~ div.sheet-varou-names,
+input[type=radio].sheet-troll-names:checked ~ div.sheet-troll-names,
+input[type=radio].sheet-combat-action:checked ~ div.sheet-combat-action,
+input[type=radio].sheet-mystic-backlash:checked ~ div.sheet-mystic-backlash,
+input[type=radio].sheet-major-plot-twist:checked ~ div.sheet-major-plot-twist,
+input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
+    display: flex;
+}
+
+.sheet-oracle-container {
+    display: flex;
+    /* justify-content: space-around; */
+    /* width: 500px; */
+}
+
+.sheet-oracle-column {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+}
+
+
+.sheet-oracle-box {
+    border: 2px solid #414042;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.sheet-oracle-box:nth-child(n+2) {
+    margin-top: 10px;
+}
+
+.sheet-oracle-title {
+    background-color: #414042;
+    color: #fff;
+    border-bottom: 1px solid #414042;
+    font-size: 19px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-transform: uppercase;
+}
+
+/* .sheet-oracle::after {
+    content: " <>"
+} */
+
+.sheet-oracle-show {
+    display: inline-flex;
+}
+
+.sheet-oracle-table {
+    border: 2px solid #414042;
+    width: 48em;
+}
+
+.sheet-oracle-row:nth-child(2n+1), .sheet-oracle:nth-child(2n+1) {
+    background-color: #ddd;
+}
+
+.sheet-oracle-row {
+    padding: 0 5px 0 5px;
+    display: flex;
+    height: 1.7em;
+}
+.sheet-oracle-roll {
+    width: 15%;
 }
 
 /* ROLL TEMPLATE */
@@ -431,7 +536,13 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 .sheet-rolltemplate-ironsworn table>tfoot>tr>th, 
 .sheet-rolltemplate-ironsworn table>thead>tr>td, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>td, 
-.sheet-rolltemplate-ironsworn table>tfoot>tr>td {
+.sheet-rolltemplate-ironsworn table>tfoot>tr>td,
+.sheet-rolltemplate-ironswornoracles table>thead>tr>th, 
+.sheet-rolltemplate-ironswornoracles table>tbody>tr>th, 
+.sheet-rolltemplate-ironswornoracles table>tfoot>tr>th, 
+.sheet-rolltemplate-ironswornoracles table>thead>tr>td, 
+.sheet-rolltemplate-ironswornoracles table>tbody>tr>td, 
+.sheet-rolltemplate-ironswornoracles table>tfoot>tr>td{
     padding: 4px;
     border: none; 
 }
@@ -444,8 +555,17 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     margin: 0px;
 }
 
-.sheet-rolltemplate-ironsworn th {
-    
+.sheet-rolltemplate-ironswornoracles table {
+    width: 100%;
+	border: 1px solid;
+	color: black;
+	font-size: 1em;
+    font-family: "Verdana", Arial, sans-serif;
+    margin: 0px;
+}
+
+.sheet-rolltemplate-ironsworn th,
+.sheet-rolltemplate-ironswornoracles th {
 	background-color: #434b4d;
 	color: #ffffff;
 	padding: 2px;
@@ -455,7 +575,8 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 	text-align: center;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-subheader {
+.sheet-rolltemplate-ironsworn .sheet-subheader,
+.sheet-rolltemplate-ironswornoracles .sheet-subheader {
     background-color: #434b4d;
     color: #ffffff;
     line-height: 0.9em;
@@ -467,7 +588,8 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     text-align: left;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-subfooter {
+.sheet-rolltemplate-ironsworn .sheet-subfooter,
+.sheet-rolltemplate-ironswornoracles .sheet-subfooter {
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
@@ -478,24 +600,29 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     text-align: left;
 }
 
-.sheet-rolltemplate-ironsworn .userscript-tcat {
+.sheet-rolltemplate-ironsworn .userscript-tcat,
+.sheet-rolltemplate-ironswornoracles .userscript-tcat {
 	font-weight: bold;
 }
 
-.sheet-rolltemplate-ironsworn td {
+.sheet-rolltemplate-ironsworn td,
+.sheet-rolltemplate-ironswornoracles td {
 	padding: 5px;
 	/*border-bottom: 1px solid black;*/
 }
 
-.sheet-rolltemplate-ironsworn tr:nth-child(odd) {
+.sheet-rolltemplate-ironsworn tr:nth-child(odd),
+.sheet-rolltemplate-ironswornoracles tr:nth-child(odd) {
 	background-color: #d9d9d6;
 }
 
-.sheet-rolltemplate-ironsworn tr:nth-child(even) {
+.sheet-rolltemplate-ironsworn tr:nth-child(even),
+.sheet-rolltemplate-ironswornoracles tr:nth-child(even) {
 	background-color: #e9e9e6;
 }
 
-.sheet-rolltemplate-ironsworn .inlinerollresult  {
+.sheet-rolltemplate-ironsworn .inlinerollresult,
+.sheet-rolltemplate-ironswornoracles .inlinerollresult  {
 	display: inline-block;
 	min-width: 1.5em;
 	text-align: center;
