--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -84,29 +84,47 @@ div.sheet-container {
   width: 100%; }
   div.sheet-container div {
     width: 100%; }
+  div.sheet-container .sheet-green-header {
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png"); }
+  div.sheet-container .sheet-yellow-header {
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png"); }
   div.sheet-container div.sheet-main {
     margin: 1%;
     width: 98%; }
     div.sheet-container div.sheet-main div.sheet-column {
       display: inline-block;
-      vertical-align: top;
-      width: 49%; }
+      vertical-align: top; }
+      div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
+        width: 55%; }
+      div.sheet-container div.sheet-main div.sheet-column:nth-of-type(2) {
+        width: 41%; }
+      div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo {
+        grid-template-columns: 20% 1fr; }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo h2 {
+          font-weight: bolder; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo h2:after {
+            content: ':'; }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo input {
+          border: 0px;
+          border-bottom: 0.15em solid #000;
+          border-radius: 0px; }
       div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox {
         grid-row-gap: 2%; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1 {
-          background-repeat: no-repeat;
-          background-position: center top;
           text-align: center; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1.sheet-green-header {
-            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png"); }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1.sheet-yellow-header {
-            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png"); }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h2 {
+          text-align: center; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes {
           grid-template-columns: 1fr 1fr 1fr 1fr;
           text-align: center; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes img {
-            padding: 1% 29%;
-            width: 100%; }
+            height: 30px;
+            width: 30px;
+            margin-left: 33%; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid {
             grid-template-columns: 2.5em 2.5em;
             grid-column-gap: 2%; }
@@ -124,8 +142,18 @@ div.sheet-container {
             text-align: center; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills {
           grid-template-columns: 1fr; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button:before {
+            content: '{'; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button:after {
+            content: '}'; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span {
+            font-weight: bold; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span:after {
+              content: '%'; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2 {
             text-align: center; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills label {
+            border: 0.15em solid #000; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-grid {
             grid-template-columns: 1fr 2em 2em 2em; }
 
@@ -178,11 +206,11 @@ div.sheet-skillbox {
   div.sheet-skillbox .sheet-skillstat {
     width: 28px; }
 
-div.sheet-logo {
+div.sheet-box {
   box-sizing: border-box;
   border: 10px solid transparent;
   -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
-  /*box-shadow: 3px 5px 2px #888888;*/
+  box-shadow: 3px 5px 2px #888888;
   float: left; }
 
 div.sheet-spewbox,
