--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -3,6 +3,7 @@
   $gray: #bbb;
   $white: #fff;
   $green: #00b300;
+  $black: #000;
 
 // GLOBALS
 //=============================
@@ -64,6 +65,18 @@ div.sheet-container {
     width: 100%;
   }
 
+  .sheet-green-header {
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
+  }
+
+  .sheet-yellow-header {
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png");
+  }
+
   div.sheet-main {
     margin: 1%;
     width: 98%;
@@ -71,23 +84,42 @@ div.sheet-container {
     div.sheet-column {
       display: inline-block;
       vertical-align: top;
-      width: 49%;
+
+      &:nth-of-type(1) {
+        width: 55%;
+      }
+
+      &:nth-of-type(2) {
+        width: 41%;
+      }
+
+      div.sheet-playerinfo {
+        grid-template-columns: 20% 1fr;
+
+        h2 {
+          font-weight: bolder;
+
+          &:after {
+            content: ':';
+          }
+        }
+
+        input {
+          border: 0px;
+          border-bottom: 0.15em solid $black;
+          border-radius: 0px;
+        }
+      }
 
       div.sheet-spewbox {
         grid-row-gap: 2%;
 
         h1 {
-          background-repeat: no-repeat;
-          background-position: center top;
           text-align: center;
+        }
 
-          &.sheet-green-header {
-            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
-          }
-
-          &.sheet-yellow-header {
-            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png");
-          }
+        h2 {
+          text-align: center;
         }
 
         div.sheet-dicetypes {
@@ -95,8 +127,9 @@ div.sheet-container {
           text-align: center;
 
           img {
-            padding: 1% 29%;
-            width: 100%;
+            height: 30px;
+            width: 30px;
+            margin-left: 33%;
           }
 
           div.sheet-attributes {
@@ -130,8 +163,30 @@ div.sheet-container {
         div.sheet-skills {
           grid-template-columns: 1fr;
 
+          button {
+            &:before {
+              content: '{';
+            }
+
+            &:after {
+              content: '}';
+            }
+
+            & > span {
+              font-weight: bold;
+
+              &:after {
+                content: '%';
+              }
+            }
+          }
+
           h2 {
             text-align: center;
+          }
+
+          label {
+            border: 0.15em solid $black;
           }
 
           div.sheet-grid {
@@ -208,11 +263,11 @@ div.sheet-container {
     }
   }
 
-  div.sheet-logo {
+  div.sheet-box {
     box-sizing: border-box;
     border: 10px solid transparent;
     -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
-    /*box-shadow: 3px 5px 2px #888888;*/
+    box-shadow: 3px 5px 2px #888888;
     float: left;
   }
 
