moving to use label for div

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -468,7 +468,7 @@ input[type=radio].sheet-combat-action:checked ~ div.sheet-combat-action,
 input[type=radio].sheet-mystic-backlash:checked ~ div.sheet-mystic-backlash,
 input[type=radio].sheet-major-plot-twist:checked ~ div.sheet-major-plot-twist,
 input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
-    display: flex;
+    display: block;
 }
 
 .sheet-oracle-container {
@@ -502,6 +502,7 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
     padding-left: 5px;
     padding-right: 5px;
     text-transform: uppercase;
+    width: 12em;
 }
 
 /* .sheet-oracle::after {
@@ -512,9 +513,13 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
     display: inline-flex;
 }
 
+.sheet-oracle-show:hover {
+    background: grey;
+}
+
 .sheet-oracle-table {
     border: 2px solid #414042;
-    width: 48em;
+    width: 45em;
 }
 
 .sheet-oracle-row:nth-child(2n+1), .sheet-oracle:nth-child(2n+1) {
