updated text to use Verdana

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -429,6 +429,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 .sheet-oracle {
     margin: 0.2em;
     color: black;
+    display: flex;
 }
 
 .sheet-oracle-roll {
@@ -475,6 +476,9 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
     display: flex;
     /* justify-content: space-around; */
     /* width: 500px; */
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 1em;
+    font-weight: bold;
 }
 
 .sheet-oracle-column {
@@ -511,6 +515,7 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
 
 .sheet-oracle-show {
     display: inline-flex;
+    font-size: 1em;
 }
 
 .sheet-oracle-show:hover {
@@ -527,9 +532,9 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
 }
 
 .sheet-oracle-row {
-    padding: 0 5px 0 5px;
+    padding: 3px 5px 3px 5px;
     display: flex;
-    height: 1.7em;
+    height: auto;
 }
 .sheet-oracle-roll {
     width: 15%;
