updated font size

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -432,13 +432,6 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     display: flex;
 }
 
-.sheet-oracle-roll {
-    cursor: pointer;
-}
-.sheet-oracle-roll:hover {
-    background: black;
-}
-
 .sheet-hidden {
     display: none;
     position: absolute;
@@ -487,6 +480,10 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
     margin-right: 10px;
 }
 
+span.sheet-oracle-result {
+    width: 36em;
+}
+
 
 .sheet-oracle-box {
     border: 2px solid #414042;
@@ -502,11 +499,11 @@ input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
     background-color: #414042;
     color: #fff;
     border-bottom: 1px solid #414042;
-    font-size: 19px;
+    font-size: 1.4em;
     padding-left: 5px;
     padding-right: 5px;
     text-transform: uppercase;
-    width: 12em;
+    width: 12.3em;
 }
 
 /* .sheet-oracle::after {
