fixed margin for oracles

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -513,6 +513,7 @@ span.sheet-oracle-result {
 .sheet-oracle-show {
     display: inline-flex;
     font-size: 1em;
+    margin: 0.3em;
 }
 
 .sheet-oracle-show:hover {
