--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -53,21 +53,23 @@ include src/pug/_mixins.pug
 				.grid.skills
 					h1.yellow-header(data-i18n='Skills') Skills
 					h2(data-i18n='Basic Skills') Basic Skills
-					.grid
-						each val in {'Balance':'perception', 'Brawl': 'strength', 'Climb':'strength', 'Composure':'willpower', 'Dodge':'perception', 'Endurance':'strength', 'Expression':'empathy', 'Grapple':'strength', 'Hold':'willpower', 'Jump/Leap':'strength', 'Lift/Pull':'strenght', 'Resist Pain':'willpower', 'Search':'perception', 'Spot/Listen':'perception', 'Stealth':'strength'}
-							+skillList(val)
-
-
+					.skill-column
+						each val, key in {'Balance':'perception', 'Brawl': 'strength', 'Climb':'strength', 'Composure':'willpower', 'Dodge':'perception', 'Endurance':'strength', 'Expression':'empathy', 'Grapple':'strength'}
+							+skillList(key, val)
+					.skill-column
+						each val, key in {'Hold':'willpower', 'Jump/Leap':'strength', 'Lift/Pull':'strenght', 'Resist Pain':'willpower', 'Search':'perception', 'Spot/Listen':'perception', 'Stealth':'strength'}
+							+skillList(key, val)
 
 					h2(data-i18n='Trained Skills') Trained Skills
-					.grid
+					.skill-column
 						each val in ['Bow/Crossbow', 'Calm Other', 'Deplomacy Persuade', 'Diplomacy Barter/Bribe', 'Diplomacy Command/Coax', 'Diplomacy Detect Motives', 'Diplomacy Intimidate', 'Digital Systems', 'Firearms Pistol', 'Firearms Long Gun', 'First Aid', 'Melee Attack Blunt', 'Melee Attack Pierce', 'Melee Attack Slash', 'Navigation', 'Swim', 'Throw']
 							- const name = val.toLowerCase();
 
 					h2(data-i18n='Expert Skills') Expert Skills
-					.grid
+					.skill-column
 						each val in ['Adv Medicine', 'Construct Engineer', 'Specialization','Specialization', 'Martial Arts', 'Pilot', 'Vehicle', 'Vehicle', 'Ride Animal', 'Animal', 'Science', 'Field Of Study', 'Field Of Study', 'Field Of Study', 'Survival', 'Toughness']
 							- const name = val.toLowerCase();
+
 
 		.column
 				.grid.box.logo
