--- a/Outbreak/src/pug/_mixins.pug
+++ b/Outbreak/src/pug/_mixins.pug
@@ -9,20 +9,23 @@ mixin diceSelect(selectedDefault)
 
 
 //- SKILL BUILDERS
-mixin skillList(val)
-	select(name=`attr_${name}_attribute` value=``)
-		each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
-			-const name = val.toLowerCase();
-			option(data-i18n=val value=`@{${name}}`) #{val}
-	select(name=`attr_${name}_advancement` value='')
-		option(value=``) -
-		each val in ['1st', '2nd', '3rd', '4th', '5th']
-			option(data-i18n=val value=`${val.slice(0, -2)}`) #{val}
-	button(name=`roll_${val}` type='roll' value=``) 
-		span(data-i18n=`${val}`) #{val}
-	label
-		input(name=`attr_${name}_increase` title=`attr_${name}_increase` value='')
-	label
-		span {
-		input(name=`attr_${name}` value='' title=`attr_${name}`)
-		span %}
+mixin skillList(skill, selected)
+	.skill
+		-const name = skill.toLowerCase();
+		select(name=`attr_${name}_attribute` value=``)
+			each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
+				- const attribute = val.toLowerCase();
+				if selected === val
+					option(data-i18n=val value=`@{${attribute}}` selected) #{val}
+				else
+					option(data-i18n=val value=`@{${attribute}}`) #{val}
+		select(name=`attr_${name}_advancement` value='')
+			option(value=``) -
+			each val in ['1st', '2nd', '3rd', '4th', '5th']
+				option(data-i18n=val value=`${val.slice(0, -2)}`) #{val}
+		button(name=`roll_${skill}` type='roll' value=``) 
+			span(data-i18n=`${skill}`) #{skill}
+		label
+			input(name=`attr_${name}_increase` title=`attr_${name}_increase` value='')
+		label
+			input(name=`attr_${name}` value='' title=`attr_${name}`)
