--- a/Outbreak/src/scss/_global.scss
+++ b/Outbreak/src/scss/_global.scss
@@ -9,23 +9,50 @@
   font-family: "Courier New", Courier, monospace;
 }
 
-button:before {
-  display: none;
-}
-
-button[type="roll"] {
-  background: #bbb;
-  border-radius: 0.1em;
-
-  &:focus,
-  &:hover,
-  &:active {
-    background-color: #770709;
-
-    & > img {
-      filter: invert(1);
+button {
+    &:before {
+        display: none;
     }
-  }
+
+    &:focus > h3,
+    &:hover > h3,
+    &:active > h3 {
+        color: $gray;
+        text-shadow: 1px 1px 2px $black, 0 0 25px $gray, 0 0 5px $gray;
+    }
+
+    &[type='roll'],
+    &[type='action'] {
+        background: $gray;
+        border: {
+            bottom             : 0.01em solid #666;
+            bottom-right-radius: 0.01em;
+            color              : hsl(0, 0%, 70%);
+            radius             : 0.25em;
+            right              : 0.02em solid hsl(0, 0%, 20%);
+            style              : outset;
+        }
+        margin: 0.2em !important;
+        padding: 0.1em !important;
+    }
+
+    &[type='action'] {
+        background: $gray;
+
+        &:focus, &:hover, &:active {
+            background-color: $green;
+            color: $gray;
+        }
+    }
+
+     &[type='roll'] {
+        background: $gray;
+
+        &:focus, &:hover, &:active {
+            background-color: $green;
+            color: $black;
+        }
+    }
 }
 
 h2 {
@@ -37,8 +64,15 @@ label {
   padding: 0px;
 }
 
+input[type="number"],
 input[type="text"] {
+  padding: 1px 2px;
   width: 100%;
+}
+
+select {
+  margin: 0px;
+  padding: 0px;
 }
 
 textarea {
