--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -9,14 +9,29 @@
 
 button:before {
   display: none; }
-
-button[type="roll"] {
+button:focus > h3, button:hover > h3, button:active > h3 {
+  color: #bbb;
+  text-shadow: 1px 1px 2px #000, 0 0 25px #bbb, 0 0 5px #bbb; }
+button[type='roll'], button[type='action'] {
   background: #bbb;
-  border-radius: 0.1em; }
-  button[type="roll"]:focus, button[type="roll"]:hover, button[type="roll"]:active {
-    background-color: #770709; }
-    button[type="roll"]:focus > img, button[type="roll"]:hover > img, button[type="roll"]:active > img {
-      filter: invert(1); }
+  border-bottom: 0.01em solid #666;
+  border-bottom-right-radius: 0.01em;
+  border-color: #b3b3b3;
+  border-radius: 0.25em;
+  border-right: 0.02em solid #333333;
+  border-style: outset;
+  margin: 0.2em !important;
+  padding: 0.1em !important; }
+button[type='action'] {
+  background: #bbb; }
+  button[type='action']:focus, button[type='action']:hover, button[type='action']:active {
+    background-color: #00b300;
+    color: #bbb; }
+button[type='roll'] {
+  background: #bbb; }
+  button[type='roll']:focus, button[type='roll']:hover, button[type='roll']:active {
+    background-color: #00b300;
+    color: #000; }
 
 h2 {
   font-size: 1em; }
@@ -25,8 +40,14 @@ label {
   margin: 0px;
   padding: 0px; }
 
+input[type="number"],
 input[type="text"] {
+  padding: 1px 2px;
   width: 100%; }
+
+select {
+  margin: 0px;
+  padding: 0px; }
 
 textarea {
   font-size: 1.1em;
@@ -44,8 +65,7 @@ textarea {
 div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
-  align-content: center;
-  justify-content: space-evenly; }
+  align-content: center; }
 
 div.sheet-navigation {
   grid-template-columns: 1fr 1fr 1fr; }
@@ -78,6 +98,9 @@ div.sheet-navigation {
   div.sheet-navigation input:nth-of-type(3), div.sheet-navigation span:nth-of-type(3) {
     grid-area: 1 / 3 / 1 / 3; }
 
+.sheet-small-font {
+  font-size: 0.5em; }
+
 div.sheet-container {
   display: inline-block;
   background-color: #e6e6e6;
@@ -99,9 +122,9 @@ div.sheet-container {
       display: inline-block;
       vertical-align: top; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
-        width: 55%; }
+        width: 60%; }
       div.sheet-container div.sheet-main div.sheet-column:nth-of-type(2) {
-        width: 41%; }
+        width: 39%; }
       div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo {
         grid-template-columns: 20% 1fr; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-playerinfo h2 {
@@ -141,21 +164,36 @@ div.sheet-container {
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points input {
             text-align: center; }
         div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills {
-          grid-template-columns: 1fr; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button:before {
-            content: '{'; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button:after {
-            content: '}'; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span {
-            font-weight: bold; }
-            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span:after {
-              content: '%'; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2 {
-            text-align: center; }
+          grid-template-columns: 49% 49%; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h1, div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2 {
+            grid-column: 1 / 3; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button {
+            font-size: 0.8em; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span {
+              font-weight: bold; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills label {
             border: 0.15em solid #000; }
-          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-grid {
-            grid-template-columns: 1fr 2em 2em 2em; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills option[value*='strength'] {
+            background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Strength_40x40.png); }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills option[value*='perception'] {
+            background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Perception_40x40.png); }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills option[value*='empathy'] {
+            background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Empathy_40x40.png); }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills option[value*='willpower'] {
+            background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Willpower_40x40.png); }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills select {
+            font-size: 0.8em; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column button {
+            height: 2em;
+            text-align: left; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill {
+            grid-template-columns: 3em 3em 1fr 10% 10%;
+            display: inline-grid;
+            grid-column-gap: 1%; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill label {
+              background-color: #fff; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill input {
+              border: none; }
 
 img.sheet-header {
   height: 30px;
