--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -13,7 +13,6 @@ div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
   align-content: center;
-  justify-content: space-evenly;
 }
 
 div.sheet-navigation {
@@ -56,6 +55,10 @@ div.sheet-navigation {
   }
 }
 
+.sheet-small-font {
+  font-size: 0.5em;
+}
+
 div.sheet-container {
   display: inline-block;
   background-color: #e6e6e6;
@@ -86,11 +89,11 @@ div.sheet-container {
       vertical-align: top;
 
       &:nth-of-type(1) {
-        width: 55%;
+        width: 60%;
       }
 
       &:nth-of-type(2) {
-        width: 41%;
+        width: 39%;
       }
 
       div.sheet-playerinfo {
@@ -161,36 +164,65 @@ div.sheet-container {
         }
 
         div.sheet-skills {
-          grid-template-columns: 1fr;
+          grid-template-columns: 49% 49%;
+
+          h1, h2 {
+            grid-column: 1 / 3;
+          }
 
           button {
-            &:before {
-              content: '{';
-            }
-
-            &:after {
-              content: '}';
-            }
+            font-size: 0.8em;
 
             & > span {
               font-weight: bold;
-
-              &:after {
-                content: '%';
-              }
             }
-          }
-
-          h2 {
-            text-align: center;
           }
 
           label {
             border: 0.15em solid $black;
           }
 
-          div.sheet-grid {
-            grid-template-columns: 1fr 2em 2em 2em;
+          option {
+            &[value*='strength'] {
+              background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Strength_40x40.png);
+            }
+
+            &[value*='perception'] {
+              background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Perception_40x40.png);
+            }
+
+            &[value*='empathy'] {
+              background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Empathy_40x40.png);
+            }
+
+            &[value*='willpower'] {
+              background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Willpower_40x40.png);
+            }
+          }
+
+          select {
+            font-size: 0.8em;
+          }
+
+          div.sheet-skill-column {
+            button {
+              height: 2em;
+              text-align: left;
+            }
+
+            div.sheet-skill {
+              grid-template-columns: 3em 3em 1fr 10% 10%;
+              display: inline-grid;
+              grid-column-gap: 1%;
+
+              label {
+                background-color: $white;
+              }
+
+              input {
+                border: none;
+              }
+            }
           }
         }
       }
